--- a/requirements.txt
+++ b/requirements.txt
@@ -20,6 +20,7 @@ pydantic==2.12.5
 pydantic_core==2.41.5
 pyparsing==3.3.1
 python-dateutil==2.9.0.post0
+python-multipart==0.0.21
 pytz==2025.2
 scikit-learn==1.8.0
 scipy==1.16.3
